--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </a>
 
                
-                <a href="https://www.fiverr.com" class="gig-item reveal">
+                <a href="https://www.fiverr.com/s/e69dkeY" class="gig-item reveal">
                     <div class="gig-info">
                         <h3>Web Development</h3>
                         <p>WordPress, HTML/CSS websites and landing pages.</p>
@@ -242,3 +242,4 @@
 </body>
 
 </html>
+
